--- a/src/styles.css
+++ b/src/styles.css
@@ -127,6 +127,7 @@
   .load-more {
     display: block;
     margin: 20px auto 20px;
+    font-family: 'Alkatra', cursive;
     font-size: 18px;
     width: 150px;
     border: gold 1px solid;
